<resources>
    <string name="app_name">GameSpot</string>
    <string name="title_activity_maps">Map</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_with_email">Sign In with Email</string>
    <string name="sign_up_with_email">Sign Up with Email</string>
    <string name="sign_in_with_account">Sign In with an Account</string>
    <string name="google_sign_in">Google Sign in</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="phone">Phone number</string>
    <string name="dob">Select Date of Birth</string>
    <string name="select_picture">Select a profile picture</string>
    <string name="next">Next</string>
    <string name="games">Arcade</string>
    <string name="settings">Settings</string>
    <string name="login">Log In</string>
    <string name="home">Home</string>
    <string name="dont_have_account_text">Don\'t have an account?</string>
    <string name="have_account_text">Have an account?</string>
    <string name="log_in_facebook">Log in with facebook</string>
    <string name="sign_up_with_google">Sign up with google</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title">Close</string>
    <string name="ipsum" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>



</resources>
