<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:isScrollContainer="true"
    android:windowSoftInputMode="adjustPan"
    android:layout_height="match_parent" >

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="9"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/logo_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        >

        <LinearLayout
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="@dimen/spacing_normal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:clickable="false"
                android:textStyle="bold"
                android:textColor="@color/white"

                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:padding="2dp"
                android:layout_marginLeft="@dimen/spacing_half"
                android:src="@drawable/ic_play_arrow_white_24dp"
                android:background="@drawable/rounded_button_background"
                />
        </LinearLayout>



        <ImageView
            android:id="@+id/logo_2"
            android:layout_width="@dimen/login_logo_size"
            android:layout_height="@dimen/login_logo_size"
            android:src="@drawable/gamespot_2"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/spacing_half"


            />





    </RelativeLayout>






    <LinearLayout
        android:id="@+id/lay_creds"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="@dimen/spacing_normal"
        android:layout_marginLeft="@dimen/spacing_2"
        android:layout_marginRight="@dimen/spacing_2"
        android:layout_weight="5.5"
        android:paddingBottom="@dimen/spacing_normal"
        android:gravity="center_horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_small"
            android:text="@string/sign_up_with_email"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/white"
            android:layout_marginLeft="@dimen/spacing_3"
            android:layout_marginRight="@dimen/spacing_3"
            />




        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/user_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:padding="@dimen/spacing_quarter"
                    android:textColorHint="@color/white"
                    android:layout_marginBottom="@dimen/spacing_quarter"
                    app:errorTextAppearance="@style/ErrorText"

                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/user_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/name"
                        android:maxLines="1"
                        android:textColor="@color/white"
                        android:textColorHighlight="@color/colorAccent"
                        android:inputType="text"
                        android:textSize="13sp"
                        />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/user_email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_quarter"
                    android:textColorHint="@color/white"
                    app:errorTextAppearance="@style/ErrorText"

                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/user_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/email"
                        android:maxLines="1"
                        android:textColor="@color/white"
                        android:textColorHighlight="@color/colorAccent"
                        android:inputType="textEmailAddress"
                        android:textSize="13sp"
                        />
                </android.support.design.widget.TextInputLayout>




                <android.support.design.widget.TextInputLayout
                    android:id="@+id/user_password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_quarter"
                    android:textColorHint="@color/white"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/white"
                    app:hintTextAppearance="@style/TextLabel"
                    errorTextAppearance="@style/MyEditText"
                    android:hint="@string/password"
                    >

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textColorHighlight="@color/colorAccent"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textSize="13sp"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/user_phone_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_quarter"
                    android:textColorHint="@color/white"
                    app:errorTextAppearance="@style/ErrorText">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/user_phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/phone"
                        android:maxLines="1"
                        android:textColor="@color/white"
                        android:textColorHighlight="@color/colorAccent"
                        android:inputType="numberDecimal"
                        android:textSize="13sp"
                        />
                </android.support.design.widget.TextInputLayout>



                   <RelativeLayout
                       android:id="@+id/select_date"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:padding="@dimen/spacing_half"
                       android:background="?attr/selectableItemBackground"
                       android:layout_marginTop="@dimen/spacing_half"
                       android:layout_marginBottom="@dimen/spacing_normal">

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/dob"
                           android:maxLines="1"
                           android:textSize="13sp"
                           android:textColor="@color/white"
                           android:layout_centerVertical="true"

                           />

                       <ImageView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:src="@drawable/ic_date_range_white_24dp"
                           android:layout_alignParentRight="true"
                           android:layout_centerVertical="true"

                           />


                   </RelativeLayout>




            </LinearLayout>
        </ScrollView>




    </LinearLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1.5"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:textSize="12sp"
        android:clickable="true"
        android:visibility="gone"
        android:background="@color/white"
        android:textColor="@color/common_google_signin_btn_text_light"
        android:text="@string/sign_up_with_google"
        >



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"

            />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google_sign_in"
            android:textColor="@color/text_black_87"
            android:clickable="false"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/text_size_normal"
            />


    </RelativeLayout>




    <LinearLayout
        android:id="@+id/bottom_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account_text"
            android:textSize="11sp"
            />

        <TextView
            android:id="@+id/sign_in_text"
            android:padding="8dp"
            android:background="?attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:clickable="true"
            android:textAllCaps="true"
            android:layout_marginLeft="@dimen/spacing_half"
            android:textSize="12sp"
            />

    </LinearLayout>

</RelativeLayout>



</LinearLayout>
</FrameLayout>